# backend_practice

./: .gitignore  pyproject.toml  start.sh
app/: main.py
app/api/: route.py
app/api/v1/: item.py  user.py
app/core/: app_events.py  config.py  containers.py  logger.py
app/core/middlewares/: __init__.py  sqlalchemy.py
app/core/settings/: __init__.py  app.py  base.py  dev.py  local.py  prod.py  test.py
app/db/: session.py
app/db/repositories/: __init__.py  item_repository.py
app/models/db/: __init__.py  item.py
app/models/domain/: item.py
app/models/schemas/: common.py  item.py
app/services/: __init__.py  item_service.py  user_service.py
